# android_translation_layer

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  ROADMAP.md  launch-atl.sh  meson.build  run-atl.sh
src/api-impl/: build.xml  meson.build
src/api-impl/android/: R.java
src/api-impl/android/animation/: AnimationHandler.java  Animator.java  AnimatorInflater.java  AnimatorListenerAdapter.java  AnimatorSet.java  ArgbEvaluator.java  Keyframe.java  ObjectAnimator.java  PropertyValuesHolder.java  StateListAnimator.java  TypeEvaluator.java  ValueAnimator.java
src/api-impl/android/annotation/: SystemApi.java  UnsupportedAppUsage.java
src/api-impl/android/app/: ActionBar.java  Activity.java  ActivityManager.java  ActivityThread.java  AlarmManager.java  AlertDialog.java  AppGlobals.java  Application.java  ApplicationErrorReport.java  ContextImpl.java  DatePickerDialog.java  Dialog.java  DownloadManager.java  Fragment.java  Instrumentation.java  IntentService.java  ListActivity.java  NativeActivity.java  Notification.java  NotificationChannel.java  NotificationManager.java  PendingIntent.java  ProgressDialog.java  RemoteInput.java  SearchManager.java  SearchableInfo.java  Service.java  SharedElementCallback.java  SharedPreferencesImpl.java  TimePickerDialog.java  UiModeManager.java  WallpaperManager.java
src/api-impl/android/appwidget/: AppWidgetManager.java
src/api-impl/android/atl/: ATLGStub.java  ATLKeyboardDialog.java  ATLKeyboardViewer.java  ATLLoadedApp.java  ATLLoadedAppManager.java  ATLMediaContentProvider.java  ATLPaths.java  ATLProvider.java  ATLSigHelper.java  EarlyPackageParser.java  GVariantBuilderParcel.java  GVariantIterParcel.java  GskCanvas.java
src/api-impl/android/bluetooth/: BluetoothManager.java
src/api-impl/android/content/: ClipData.java  ClipDescription.java  ComponentName.java  ContentProvider.java  ContentResolver.java  ContentUris.java  Context.java  ContextWrapper.java  Intent.java  IntentFilter.java  MutableContextWrapper.java  SearchRecentSuggestionsProvider.java  ServiceConnection.java  UriMatcher.java
src/api-impl/android/database/: AbstractCursor.java  AbstractWindowedCursor.java  CharArrayBuffer.java  ContentObservable.java  ContentObserver.java  CursorWindow.java  DataSetObservable.java  DatabaseUtils.java  DefaultDatabaseErrorHandler.java  MergeCursor.java  Observable.java  StaleDataException.java
src/api-impl/android/graphics/: Bitmap.java  BitmapFactory.java  BlurMaskFilter.java  Camera.java  Canvas.java  Color.java  ColorMatrix.java  ColorSpace.java  ComposeShader.java  FontFamily.java  Insets.java  Matrix.java  Outline.java  Paint.java  Path.java  PathEffect.java  Point.java  PointF.java  PorterDuffColorFilter.java  Rect.java  RectF.java  Region.java  Shader.java  SweepGradient.java  Typeface.java
src/api-impl/android/hardware/: Camera.java  GeomagneticField.java  Sensor.java  SensorEventListener.java  SensorManager.java
src/api-impl/android/inputmethodservice/: InputMethodService.java
src/api-impl/android/location/: Location.java  LocationListener.java  LocationManager.java
src/api-impl/android/media/: AudioAttributes.java  AudioFormat.java  AudioManager.java  AudioRecord.java  AudioTrack.java  MediaCodec.java  MediaCodecInfo.java  MediaCodecList.java  MediaDescription.java  MediaFormat.java  MediaMetadata.java  MediaMetadataRetriever.java  MediaPlayer.java  MediaRecorder.java  MediaScannerConnection.java  Ringtone.java  RingtoneManager.java  SoundPool.java  ToneGenerator.java
src/api-impl/android/net/: ConnectivityManager.java  LocalServerSocket.java  LocalSocket.java  NetworkCapabilities.java  NetworkInfo.java  NetworkRequest.java  SSLSessionCache.java  Uri.java  UriCodec.java
src/api-impl/android/nfc/: NfcAdapter.java  NfcManager.java
src/api-impl/android/opengl/: GLSurfaceView.java  GLU.java  GLUtils.java  Matrix.java
src/api-impl/android/os/: AsyncTask.java  BadParcelableException.java  BaseBundle.java  Binder.java  Build.java  Bundle.java  CancellationSignal.java  ConditionVariable.java  Debug.java  DropBoxManager.java  Environment.java  FileObserver.java  Handler.java  LocaleList.java  Looper.java  MemoryFile.java  Message.java  MessageQueue.java  Parcel.java  ParcelFileDescriptor.java  Process.java  StatFs.java  StrictMode.java  SystemProperties.java  VibrationEffect.java  Vibrator.java
src/api-impl/android/preference/: ListPreference.java  Preference.java  PreferenceActivity.java  PreferenceManager.java
src/api-impl/android/provider/: Contacts.java  DocumentsContract.java  MediaStore.java  Settings.java  Telephony.java  UserDictionary.java
src/api-impl/android/telephony/: CellLocation.java  SubscriptionManager.java  TelephonyManager.java
src/api-impl/android/text/: BoringLayout.java  Editable.java  Html.java  Layout.java  Selection.java  SpanWatcher.java  SpannableStringBuilder.java  SpannableStringInternal.java  StaticLayout.java  TextPaint.java  TextUtils.java
src/api-impl/android/util/: AndroidException.java  AndroidRuntimeException.java  ArrayMap.java  ArraySet.java  AttributeSet.java  Base64.java  DecompiledXmlResourceParser.java  DisplayMetrics.java  JsonReader.java  JsonWriter.java  Log.java  LongArray.java  LruCache.java  MapCollections.java  Pair.java  Patterns.java  Property.java  Rational.java  Slog.java  SparseBooleanArray.java  SparseLongArray.java  StateSet.java  TypedValue.java  Xml.java  XmlPullAttributes.java
src/api-impl/android/view/: AbsSavedState.java  AnimationSet.java  Choreographer.java  ContextMenu.java  ContextThemeWrapper.java  Display.java  DisplayListCanvas.java  GestureDetector.java  Gravity.java  InflateException.java  InputDevice.java  InputEvent.java  KeyCharacterMap.java  KeyEvent.java  LayoutInflater.java  Menu.java  MenuInflater.java  MenuItem.java  MotionEvent.java  OrientationEventListener.java  RenderNode.java  ScaleGestureDetector.java  SubMenu.java  SurfaceHolder.java  SurfaceView.java  TextureView.java  View.java  ViewConfiguration.java  ViewGroup.java  ViewGroupOverlay.java  ViewOutlineProvider.java  (+10 more)
src/gstub/: build.xml  meson.build
(+419 files in other folders)
